--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "axios": "^1.1.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "customize-cra": "^1.0.0",
+    "firebase": "^9.20.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "sass": "^1.54.9",
     "web-vitals": "^2.1.4"
   },
